<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GmailAuthentication">

    <EditText
        android:id="@+id/editTextCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="54dp"
        android:layout_marginLeft="54dp"
        android:autofillHints="@string/INPUTCODE"
        android:ems="10"
        android:fontFamily="sans-serif-smallcaps"
        android:hint="@string/INPUTCODE"
        android:inputType="number"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.38"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.361" />

    <TextView
        android:id="@+id/codeTextView"
        android:layout_width="86dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/CODE"
        android:textColor="#2196F3"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.364" />

    <TextView
        android:id="@+id/appTextView"
        android:layout_width="220dp"
        android:layout_height="52dp"
        android:layout_marginBottom="367dp"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:text="@string/APPNAME"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#2196F3"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.534"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.118" />

    <Button
        android:id="@+id/authButton"
        android:layout_width="133dp"
        android:layout_height="63dp"
        android:text="@string/VERIFYCODE"
        app:backgroundTint="#2196F3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.888"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/sendCodeButton"
        android:layout_width="133dp"
        android:layout_height="63dp"
        android:text="@string/SENDCODE"
        app:backgroundTint="#2196F3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mailTextView"
        android:layout_width="55dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:background="#002196F3"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/MAIL"
        android:textColor="#2196F3"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/editTextMail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <EditText
        android:id="@+id/editTextMail"
        android:layout_width="285dp"
        android:layout_height="44dp"
        android:layout_marginStart="54dp"
        android:layout_marginLeft="54dp"
        android:autofillHints="@string/INPUTGMAIL"
        android:ems="10"
        android:fontFamily="sans-serif-smallcaps"
        android:hint="@string/INPUTGMAIL"
        android:inputType="textPersonName"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.777"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.243" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="439dp"
        android:layout_height="37dp"
        android:layout_marginStart="169dp"
        android:layout_marginLeft="169dp"
        android:layout_marginEnd="157dp"
        android:layout_marginRight="157dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.553"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.187"
        app:srcCompat="@drawable/substract"
        app:tint="#2196F3"
        tools:ignore="VectorDrawableCompat" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="439dp"
        android:layout_height="37dp"
        android:layout_marginStart="169dp"
        android:layout_marginLeft="169dp"
        android:layout_marginEnd="157dp"
        android:layout_marginRight="157dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.304"
        app:srcCompat="@drawable/substract"
        app:tint="#2196F3"
        tools:ignore="VectorDrawableCompat" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="439dp"
        android:layout_height="37dp"
        android:layout_marginStart="169dp"
        android:layout_marginLeft="169dp"
        android:layout_marginEnd="157dp"
        android:layout_marginRight="157dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.422"
        app:srcCompat="@drawable/substract"
        app:tint="#2196F3"
        tools:ignore="VectorDrawableCompat" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="61dp"
        android:layout_height="43dp"
        android:layout_marginStart="41dp"
        android:layout_marginLeft="41dp"
        android:layout_marginBottom="16dp"
        app:tint="#2196F3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.433"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.141"
        app:srcCompat="@drawable/live"
        tools:ignore="VectorDrawableCompat" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="56dp"
        android:layout_height="57dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.589" />

    <ImageView
        android:id="@+id/imageView27"
        android:layout_width="659dp"
        android:layout_height="712dp"
        android:layout_marginTop="4dp"
        android:rotation="180"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.243"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView11"
        app:layout_constraintVertical_bias="0.204"
        app:srcCompat="@drawable/k5ygd"
        app:tint="#2196F3" />

</androidx.constraintlayout.widget.ConstraintLayout>